--- a/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -63,8 +63,9 @@
                                     </ul>
                                 </li>
 
-                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Empresas<b class="caret"></b></a>
+                                <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Empresa<b class="caret"></b></a>
                                     <ul class="dropdown-menu">
+                                        <li><ice:outputLink value="modificarempresa.xhtml">Modificar datos de la empresa</ice:outputLink></li>
                                         <li><ice:outputLink value="relaciones-empresariales.xhtml">Relaciones empresariales</ice:outputLink></li>
                                     </ul>
                                 </li>
@@ -78,7 +79,7 @@
                             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Hola, #{usuario.nombre}<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <li><ice:outputLink  value="#">Ayuda</ice:outputLink></li>                                                  
-                                    <li><ice:outputLink  value="#">Modificar mis datos</ice:outputLink></li>
+                                    <li><ice:outputLink  value="modificarusuario.xhtml">Modificar mis datos</ice:outputLink></li>
                                     <li><ice:outputLink value="cerrarsesion.xhtml">Cerrar sesión</ice:outputLink></li>
                                 </ul>
                             </li>
