--- a/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
+++ b/trunk/web/WEB-INF/facelets/templates/plantillalogueado.xhtml
@@ -58,8 +58,7 @@
                                 </li>
                                 <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Salas reuni&oacute;n<b class="caret"></b></a>
                                     <ul class="dropdown-menu">
-                                        <li><ice:outputLink value="#">Administrar salas de reunión</ice:outputLink></li>
-
+                                        <li><ice:outputLink value="administrarsalasreunion.xhtml">A&ntilde;adir nueva sala</ice:outputLink></li>
                                     </ul>
                                 </li>
 
