--- a/web/WEB-INF/facelets/templates/plantilla.xhtml
+++ b/web/WEB-INF/facelets/templates/plantilla.xhtml
@@ -24,7 +24,7 @@
     <h:body>
         <div class="wrapper">
             <div id="top">
-                <div id="logocm"><ice:outputLink value="index.xhtml"><ice:graphicImage alt="Logo CreativeMeetings" title="CreativeMeetings" url="#{resource['img:logo-creativemeeting.png']}"/></ice:outputLink></div>
+                <div id="logocm"><ice:outputLink value="index.xhtml"><ice:graphicImage alt="Logo CreativeMeetings" title="CreativeMeetings" url="#{resource['img:logo-creativemeetings.png']}"/></ice:outputLink></div>
                 <div><ui:insert name="logoempresa"></ui:insert></div>
             </div>
             <div>
